--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "@angular/animations": "5.0.5",
+    "@angular/animations": "^5.0.5",
     "@angular/cdk": "5.0.0-rc0",
     "@angular/common": "5.0.5",
     "@angular/compiler": "5.0.5",
     "@angular/core": "5.0.5",
+    "@angular/flex-layout": "^5.0.0-beta.14",
     "@angular/forms": "5.0.5",
     "@angular/http": "5.0.5",
+    "@angular/material": "5.0.0-rc0",
     "@angular/platform-browser": "5.0.5",
     "@angular/platform-browser-dynamic": "5.0.5",
     "@angular/router": "5.0.5",
     "babel-runtime": "6.26.0",
+    "hammerjs": "^2.0.8",
     "meteor-node-stubs": "0.3.2",
     "meteor-rxjs": "0.4.8",
+    "moment": "^2.22.1",
+    "ng2-ckeditor": "^1.2.0",
     "rxjs": "5.5.2",
     "zone.js": "0.8.18"
   },
