--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run --port 7777"
   },
   "dependencies": {
     "@angular/animations": "^5.0.5",
@@ -16,8 +16,11 @@
     "@angular/platform-browser": "5.0.5",
     "@angular/platform-browser-dynamic": "5.0.5",
     "@angular/router": "5.0.5",
+    "angular2-meteor-accounts-ui": "^1.0.0",
     "babel-runtime": "6.26.0",
+    "cordova": "^8.0.0",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.10",
     "meteor-node-stubs": "0.3.2",
     "meteor-rxjs": "0.4.8",
     "moment": "^2.22.1",
