--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "start": "meteor run --port 7777"
+    "start": "meteor run",
+    "lint": "tslint -c tslint.json 'client/**/*.ts'"
   },
   "dependencies": {
     "@angular/animations": "^5.0.5",
@@ -26,6 +27,7 @@
     "moment": "^2.22.1",
     "ng2-ckeditor": "^1.2.0",
     "rxjs": "5.5.2",
+    "tslint": "^5.9.1",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "chai": "4.1.2",
     "phantomjs-prebuilt": "2.1.16",
     "sinon": "4.1.2",
+    "tslint-angular": "^1.1.1",
     "typescript": "2.6.2"
   }
 }
