--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "lint": "tslint -c tslint.json 'client/**/*.ts'"
+    "lint": "tslint -c tslint.json 'client/**/*.ts'",
+    "build": "webpack --mode=production"
   },
   "dependencies": {
     "@angular/animations": "^5.0.5",
@@ -17,7 +18,6 @@
     "@angular/platform-browser": "5.0.5",
     "@angular/platform-browser-dynamic": "5.0.5",
     "@angular/router": "5.0.5",
-    "angular2-meteor-accounts-ui": "^1.0.0",
     "babel-runtime": "6.26.0",
     "cordova": "^8.0.0",
     "hammerjs": "^2.0.8",
@@ -32,14 +32,26 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "5.0.5",
+    "@ngtools/webpack": "^6.0.0-rc.10",
     "@types/chai": "4.0.8",
     "@types/meteor": "1.4.12",
     "@types/mocha": "2.2.44",
     "@types/sinon": "4.0.0",
     "chai": "4.1.2",
+    "fork-ts-checker-webpack-plugin": "^0.4.1",
+    "html-webpack-plugin": "^3.2.0",
+    "install": "^0.11.0",
+    "npm": "^6.0.0",
+    "path": "^0.12.7",
     "phantomjs-prebuilt": "2.1.16",
+    "raw-loader": "^0.5.1",
     "sinon": "4.1.2",
+    "ts-loader": "^4.2.0",
     "tslint-angular": "^1.1.1",
-    "typescript": "2.6.2"
+    "typescript": "2.6.2",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-node-externals": "^1.7.2"
   }
 }
