--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "meteor-rxjs": "0.4.8",
     "moment": "^2.22.1",
     "ng2-ckeditor": "^1.2.0",
+    "ngx-clipboard": "^10.0.0",
     "rxjs": "5.5.2",
     "tslint": "^5.9.1",
     "zone.js": "0.8.18"
